# RTOS_template_STM32G431

./: .gitignore  CMakeLists.txt  README.md
app/inc/: FreeRTOSConfig.h  I2CBusJob.h  SerialJob.h  i2c.h  jobs.h  settings.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  uart.h  utilities.h  variables.h
app/src/: I2CBusJob.c  SerialJob.c  callbacks.c  i2c.c  jobs.c  main.c  settings.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  uart.c  utilities.c
